[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/fonts/FontSmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=3]
[ext_resource path="res://systems/options/KeyBindingsPanel.gd" type="Script" id=4]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=5]

[node name="KeyBindingsPanel" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.0705882, 0.0705882, 0.101961, 0.733333 )
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 223.0
margin_top = 71.0
margin_right = 1696.0
margin_bottom = 1009.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1461.0
margin_bottom = 926.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1433.0
margin_bottom = 898.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1417.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "options.keybindings.title"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 1417.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "options.keybindings.text"
autowrap = true

[node name="Titles" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 1417.0
margin_bottom = 153.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Titles"]
margin_right = 414.0
margin_bottom = 37.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "options.keybindings.action"

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Titles"]
margin_left = 430.0
margin_right = 899.0
margin_bottom = 37.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "options.keybindings.keyboard"
align = 1

[node name="Label4" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Titles"]
margin_left = 915.0
margin_right = 1381.0
margin_bottom = 37.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "options.keybindings.gamepad"
align = 2

[node name="Control" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Titles"]
margin_left = 1397.0
margin_right = 1417.0
margin_bottom = 37.0
rect_min_size = Vector2( 20, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 1417.0
margin_bottom = 769.0
rect_min_size = Vector2( 660, 600 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="KeyBindings" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1417.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 785.0
margin_right = 1417.0
margin_bottom = 809.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 825.0
margin_right = 1417.0
margin_bottom = 882.0

[node name="CancelButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 461.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "options.keybindings.cancel"

[node name="ResetButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 477.0
margin_right = 939.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "options.keybindings.restoredefault"

[node name="ButtonApply" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 955.0
margin_right = 1417.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "options.keybindings.apply"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0705882, 0.0705882, 0.101961, 0.733333 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/CenterContainer"]
margin_left = 948.0
margin_top = 528.0
margin_right = 972.0
margin_bottom = 552.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1341.0
margin_bottom = 332.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1313.0
margin_bottom = 304.0

[node name="RebindingTitleLabel" type="Label" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1297.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 620.0
margin_top = 81.0
margin_right = 676.0
margin_bottom = 174.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 44.0
margin_bottom = 81.0

[node name="NewKeyLabel" type="Label" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="ErrorMessageLabel" type="Label" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 1297.0
margin_bottom = 215.0
align = 1

[node name="CaptureKeyControls" type="HBoxContainer" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 1297.0
margin_bottom = 288.0

[node name="CancelInputButton" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls"]
margin_right = 420.0
margin_bottom = 57.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../CaptureButton")
focus_neighbour_bottom = NodePath(".")
size_flags_horizontal = 3
text = "options.keybindings.rebinding.cancel"

[node name="CaptureButton" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls"]
margin_left = 436.0
margin_right = 870.0
margin_bottom = 57.0
focus_neighbour_left = NodePath("../CancelInputButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../ApplyInputButton")
focus_neighbour_bottom = NodePath(".")
size_flags_horizontal = 3
text = "options.keybindings.rebinding.capture"

[node name="ApplyInputButton" type="Button" parent="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls"]
margin_left = 886.0
margin_right = 1297.0
margin_bottom = 57.0
focus_neighbour_left = NodePath("../CaptureButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
size_flags_horizontal = 3
text = "options.keybindings.rebinding.apply"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ButtonApply" to="." method="_on_ButtonApply_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls/CancelInputButton" to="." method="_on_CancelInputButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls/CaptureButton" to="." method="clearCapture"]
[connection signal="pressed" from="ColorRect/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CaptureKeyControls/ApplyInputButton" to="." method="_on_ApplyInputButton_pressed"]
